# NoiseGenerator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddTests.cmake
config/: settings.ini
dev_ops/: build_project.bat  clean_build.bat  generate_project.bat  rebuild_test.bat  run_tests.bat
docs/: index.html
shaders/: perlin.comp
src/: main.cpp
src/Application/: NGApplication.cpp  NGApplication.h
src/Config/: SettingsManager.cpp  SettingsManager.h
src/Controller/: MenuBarController.h  NoisePanelController.h
src/Export/: ImageExporter.cpp  ImageExporter.h
src/GUI/: GuiManager.cpp  GuiManager.h  GuiUtils.h  IconRegistry.cpp  IconRegistry.h
src/Image/: ImageExporter.cpp  ImageExporter.h
src/Logger/: Logger.cpp  Logger.h  LoggerMacro.h  LoggerUI.h
src/MVC/Controller/: MenuBarController.cpp  MenuBarController.h  NoisePanelController.cpp  NoisePanelController.h
src/MVC/Model/: NoisePanelModel.cpp
src/MVC/View/: MenuBarUI.cpp  MenuBarUI.h  NoisePreviewPanelUI.cpp  NoisePreviewPanelUI.h
src/Math/: vector.h
src/Model/: MenuBarModel.h  NoisePanelModel.h
src/Noise/: NoiseGenerator.cpp  NoiseGenerator.h  NoiseMath.cpp  NoiseMath.h  NoisePreviewPanel.cpp  NoisePreviewPanel.h  NoisePreviewPanelUI.cpp  NoisePreviewPanelUI.h  NoiseTypes.h
src/Utils/: Constants.h  Delegates.h  FileUtils.h  RandomUtils.h  StringUtils.h  UIUtils.h
src/View/: MenuBarUI.cpp  NoisePreviewPanelUI.h
tests/: test_noise_generator.cpp  test_noise_math.cpp
